--- a/calorie-backend2/config/database.yml
+++ b/calorie-backend2/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: calorie-backend_development
+  database: calorie-backend2_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: calorie-backend
+  #username: calorie-backend2
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: calorie-backend_test
+  database: calorie-backend2_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: calorie-backend_production
-  username: calorie-backend
-  password: <%= ENV['CALORIE-BACKEND_DATABASE_PASSWORD'] %>
+  database: calorie-backend2_production
+  username: calorie-backend2
+  password: <%= ENV['CALORIE-BACKEND2_DATABASE_PASSWORD'] %>
